--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         shared with Google Sheets that you explicitly authorize.</p>
 
     <p><a href="privacy.html">Privacy Policy</a></p>
+    <p><a href="terms.html">Terms of Service</a></p>
 </body>
 
 </html>
