--- a/privacy.html
+++ b/privacy.html
@@ -7,7 +7,6 @@
 
 <body>
     <h1>Privacy Policy</h1>
-    <p>Effective date: [Insert Date]</p>
 
     <p>BudgetPal is a desktop application that helps users import bank transaction data from CSV files and automatically
         populate and categorize this data in a Google Sheets document they choose.</p>
@@ -34,7 +33,7 @@
         data you authorize.</p>
 
     <h2>Contact</h2>
-    <p>If you have any questions or concerns, please reach out to [your email address or GitHub link].</p>
+    <p>If you have any questions or concerns, please reach out to [help.budgetpal@gmail.com].</p>
 </body>
 
 </html>
