--- a/terms.html
+++ b/terms.html
@@ -23,4 +23,37 @@
         <li>You must comply with all applicable laws and regulations when using BudgetPal.</li>
     </ul>
 
-    <h2>3
+    <h2>3. Google Account and Data Access</h2>
+    <p>To use BudgetPal, you must authorize the application to access your Google account using OAuth 2.0. This access is limited to the permissions required to read your Google Drive metadata and write to your selected Google Sheets.</p>
+    <p>BudgetPal does not store your Google credentials or access token beyond the local machine, and access is used solely to fulfill the features of the app.</p>
+
+    <h2>4. Data Privacy</h2>
+    <p>All data imported and processed by BudgetPal remains on your local device unless explicitly shared or exported by you. We do not collect or transmit your financial data or personal information.</p>
+
+    <h2>5. Acceptable Use</h2>
+    <ul>
+        <li>You may not use BudgetPal to upload or process unlawful, harmful, or fraudulent content.</li>
+        <li>You may not reverse-engineer, decompile, or otherwise tamper with the application.</li>
+        <li>Use of BudgetPal is subject to Google’s terms of service when interacting with Google Sheets or Drive APIs.</li>
+    </ul>
+
+    <h2>6. Software Updates</h2>
+    <p>BudgetPal may occasionally release updates to improve functionality or security. It is your responsibility to keep the application updated to the latest version.</p>
+
+    <h2>7. Disclaimer of Warranties</h2>
+    <p>BudgetPal is provided "as is" without warranties of any kind, express or implied. We do not guarantee that the application will be error-free or that it will meet your requirements.</p>
+
+    <h2>8. Limitation of Liability</h2>
+    <p>In no event shall BudgetPal or its creators be liable for any indirect, incidental, special, or consequential damages arising out of or related to your use of the application.</p>
+
+    <h2>9. Termination</h2>
+    <p>We reserve the right to terminate your access to BudgetPal at any time if you violate these terms.</p>
+
+    <h2>10. Changes to Terms</h2>
+    <p>We may update these Terms of Service from time to time. Continued use of BudgetPal after changes constitutes your acceptance of the revised terms.</p>
+
+    <h2>11. Contact</h2>
+    <p>If you have questions or concerns regarding these terms, please contact us at help.budgetpal@gmail.com</p>
+
+</body>
+</html>
