--- a/privacy.html
+++ b/privacy.html
@@ -33,7 +33,7 @@
         data you authorize.</p>
 
     <h2>Contact</h2>
-    <p>If you have any questions or concerns, please reach out to [help.budgetpal@gmail.com].</p>
+    <p>If you have any questions or concerns, please reach out to help.budgetpal@gmail.com.</p>
 </body>
 
 </html>
