Update for revised scopes

--- a/privacy.html
+++ b/privacy.html
@@ -13,24 +13,20 @@
 
     <h2>What Data We Access</h2>
     <ul>
-        <li><strong>Google Sheets Access:</strong> We request access to your Google Sheets in order to write transaction
-            data to a spreadsheet you select.</li>
-        <li><strong>Google Drive Metadata:</strong> We request read-only access to file names and IDs on your Google
-            Drive to help you select the correct spreadsheet.</li>
-        <li><strong>Basic Profile Info:</strong> We request your email address and basic profile information solely for
-            user identification and personalization within the app.</li>
+        <li><strong>Google Drive File Access:</strong> We request access to create, open, and modify Google Sheets files that you explicitly select using the Google File Picker. This access is limited to only those files you choose.</li>
+        <li><strong>Basic Profile Info:</strong> We request your email address and basic profile information solely for user identification and personalization within the app.</li>
     </ul>
 
     <h2>What We Don't Do</h2>
     <ul>
         <li>We do not collect or store your data on any external servers.</li>
+        <li>We do not access or modify any files on your Google Drive unless you explicitly select them via the Google File Picker.</li>
         <li>We do not share your personal or financial data with any third parties.</li>
         <li>All data processing happens locally on your device.</li>
     </ul>
 
     <h2>Security</h2>
-    <p>BudgetPal uses Google's secure OAuth 2.0 system for authorization. You are always in control of which files and
-        data you authorize.</p>
+    <p>BudgetPal uses Google's secure OAuth 2.0 system for authorization. You are always in control of which files and data you authorize.</p>
 
     <h2>Contact</h2>
     <p>If you have any questions or concerns, please reach out to help.budgetpal@gmail.com.</p>
