--- a/terms.html
+++ b/terms.html
@@ -24,8 +24,8 @@
     </ul>
 
     <h2>3. Google Account and Data Access</h2>
-    <p>To use BudgetPal, you must authorize the application to access your Google account using OAuth 2.0. This access is limited to the permissions required to read your Google Drive metadata and write to your selected Google Sheets.</p>
-    <p>BudgetPal does not store your Google credentials or access token beyond the local machine, and access is used solely to fulfill the features of the app.</p>
+    <p>To use BudgetPal, you must authorize the application to access your Google account using OAuth 2.0. This access is limited to the permissions required to read basic profile information (such as your email) and to access specific Google Sheets files you select via the Google File Picker.</p>
+    <p>BudgetPal does not access your entire Google Drive. It only works with the files you explicitly choose. Your Google credentials and access token are not stored on any external servers; they remain securely on your local machine and are used solely to enable the app’s core features.</p>
 
     <h2>4. Data Privacy</h2>
     <p>All data imported and processed by BudgetPal remains on your local device unless explicitly shared or exported by you. We do not collect or transmit your financial data or personal information.</p>
