Privacy and terms WIP

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/general.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/queries.css" />
+    <link rel="stylesheet" href="/css/general.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/queries.css" />
 
     <script
       type="module"
@@ -39,11 +39,11 @@
     ></script>
     <script defer src="js/script.js"></script>
 
-    <title>Omnifood &mdash; Never cook again!</title>
+    <title>Omnifood &mdash; Always cook!</title>
   </head>
   <body>
     <header class="header">
-      <a href="#">
+      <a href="/">
         <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
       </a>
 
