--- a/terms/index.html
+++ b/terms/index.html
@@ -45,7 +45,7 @@
 
 <body>
     <header class="header">
-      <a href="#">
+      <a href="/">
         <img class="logo" alt="Omnifood logo" src="/img/omnifood-logo.png" />
       </a>
 
@@ -62,55 +62,117 @@
         <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
       </button>
     </header>
+
+    <section class="section-how" id="how">
+        <div class="container">
+            <span class="subheading">Terms of Service</span>
+        </div>
+
+        <div class="container grid grid--1-cols grid--center-v">
+            <!-- TERMS-ACCEPT -->
+            <div class="privacy-text-box">
+            <p class="privacy-description">
+                By using this application, you agree to the following terms and conditions. Please read
+                them carefully before using the app.
+            </p>
+            </div>
+
+            <!-- DESCRIPTION OF SERVICE -->
+            <div class="privacy-text-box">
+            <h3 class="heading-tertiary">1. Description of Service</h3>
+            <p class="privacy-description">
+                BudgetPal is a desktop application that helps users import financial transactions from CSV files and populate
+                their chosen Google Sheets with categorized expense data.
+            </p>
+            </div>
+
+            <!-- USER RESPONSIBILITIES -->
+            <div class="privacy-text-box">
+            <h3 class="heading-tertiary">2. User Responsibilities</h3>
+            <p class="privacy-description">
+                You are responsible for ensuring the accuracy of the CSV files you upload and the configuration of
+                    categories.<br>
+                You are responsible for selecting the correct Google Sheets document when authorizing BudgetPal.<br>
+                You must comply with all applicable laws and regulations when using BudgetPal.<br>
+            </p>
+            </div>
+
+            <!-- GOOGLE ACCOUNT AND DATA ACCESS -->
+            <div class="privacy-text-box">
+            <h3 class="heading-tertiary">3. Google Account and Data Access</h3>
+            <p class="privacy-description">
+                To use BudgetPal, you must authorize the application to access your Google account using OAuth 2.0. This access is limited to the permissions required to read basic profile information (such as your email) and to access specific Google Sheets files you select via the Google File Picker.
+                BudgetPal does not access your entire Google Drive. It only works with the files you explicitly choose. Your Google credentials and access token are not stored on any external servers; they remain securely on your local machine and are used solely to enable the app’s core features.
+            </p>
+            </div>
+
+            <!-- DATA PRIVACY -->
+            <div class="privacy-text-box">
+            <h3 class="heading-tertiary">4. Data Privacy</h3>
+            <p class="privacy-description">
+                All data imported and processed by BudgetPal remains on your local device unless explicitly shared or exported by you. We do not collect or transmit your financial data or personal information.
+            </p>
+            </div>
+
+            <!-- ACCEPTABLE USE -->
+            <div class="privacy-text-box">
+            <h3 class="heading-tertiary">5. Acceptable Use</h3>
+            <p class="privacy-description">
+                You may not use BudgetPal to upload or process unlawful, harmful, or fraudulent content.<br>
+                You may not reverse-engineer, decompile, or otherwise tamper with the application.<br>
+                Use of BudgetPal is subject to Google’s terms of service when interacting with Google Sheets or Drive APIs.<br>
+            </p>
+            </div>
+
+            <!-- SOFTWARE UPDATES -->
+            <div class="privacy-text-box">
+            <h3 class="heading-tertiary">6. Software Updates</h3>
+            <p class="privacy-description">
+                BudgetPal may occasionally release updates to improve functionality or security. It is your responsibility to keep the application updated to the latest version.
+            </p>
+            </div>
+
+            <!-- DISCLAIMER OF WARRANTIES -->
+            <div class="privacy-text-box">
+            <h3 class="heading-tertiary">7. Disclaimer of Warranties</h3>
+            <p class="privacy-description">
+                BudgetPal is provided "as is" without warranties of any kind, express or implied. We do not guarantee that the application will be error-free or that it will meet your requirements.
+            </p>
+            </div>
+
+            <!-- LIMITATION OF LIABILITY -->
+            <div class="privacy-text-box">
+            <h3 class="heading-tertiary">8. Limitation of Liability</h3>
+            <p class="privacy-description">
+                In no event shall BudgetPal or its creators be liable for any indirect, incidental, special, or consequential damages arising out of or related to your use of the application.
+            </p>
+            </div>
+
+            <!-- TERMINATION -->
+            <div class="privacy-text-box">
+            <h3 class="heading-tertiary">9. Termination</h3>
+            <p class="privacy-description">
+                We reserve the right to terminate your access to BudgetPal at any time if you violate these terms.
+            </p>
+            </div>
+
+            <!-- CHANGES OF TERMS -->
+            <div class="privacy-text-box">
+            <h3 class="heading-tertiary">10. Changes of Terms</h3>
+            <p class="privacy-description">
+                We may update these Terms of Service from time to time. Continued use of BudgetPal after changes constitutes your acceptance of the revised terms.
+            </p>
+            </div>
+
+            <!-- CONTACT -->
+            <div class="privacy-text-box">
+            <h3 class="heading-tertiary">11. Contact</h3>
+            <p class="privacy-description">
+                If you have questions or concerns regarding these terms, please contact us at help.budgetpal@gmail.com
+            </p>
+            </div>
+        </div>
+    </section>
     
-    <h1>Terms of Service</h1>
-
-    <p>Welcome to BudgetPal. By using this application, you agree to the following terms and conditions. Please read
-        them carefully before using the app.</p>
-
-    <h2>1. Description of Service</h2>
-    <p>BudgetPal is a desktop application that helps users import financial transactions from CSV files and populate
-        their chosen Google Sheets with categorized expense data.</p>
-
-    <h2>2. User Responsibilities</h2>
-    <ul>
-        <li>You are responsible for ensuring the accuracy of the CSV files you upload and the configuration of
-            categories.</li>
-        <li>You are responsible for selecting the correct Google Sheets document when authorizing BudgetPal.</li>
-        <li>You must comply with all applicable laws and regulations when using BudgetPal.</li>
-    </ul>
-
-    <h2>3. Google Account and Data Access</h2>
-    <p>To use BudgetPal, you must authorize the application to access your Google account using OAuth 2.0. This access is limited to the permissions required to read basic profile information (such as your email) and to access specific Google Sheets files you select via the Google File Picker.</p>
-    <p>BudgetPal does not access your entire Google Drive. It only works with the files you explicitly choose. Your Google credentials and access token are not stored on any external servers; they remain securely on your local machine and are used solely to enable the app’s core features.</p>
-
-    <h2>4. Data Privacy</h2>
-    <p>All data imported and processed by BudgetPal remains on your local device unless explicitly shared or exported by you. We do not collect or transmit your financial data or personal information.</p>
-
-    <h2>5. Acceptable Use</h2>
-    <ul>
-        <li>You may not use BudgetPal to upload or process unlawful, harmful, or fraudulent content.</li>
-        <li>You may not reverse-engineer, decompile, or otherwise tamper with the application.</li>
-        <li>Use of BudgetPal is subject to Google’s terms of service when interacting with Google Sheets or Drive APIs.</li>
-    </ul>
-
-    <h2>6. Software Updates</h2>
-    <p>BudgetPal may occasionally release updates to improve functionality or security. It is your responsibility to keep the application updated to the latest version.</p>
-
-    <h2>7. Disclaimer of Warranties</h2>
-    <p>BudgetPal is provided "as is" without warranties of any kind, express or implied. We do not guarantee that the application will be error-free or that it will meet your requirements.</p>
-
-    <h2>8. Limitation of Liability</h2>
-    <p>In no event shall BudgetPal or its creators be liable for any indirect, incidental, special, or consequential damages arising out of or related to your use of the application.</p>
-
-    <h2>9. Termination</h2>
-    <p>We reserve the right to terminate your access to BudgetPal at any time if you violate these terms.</p>
-
-    <h2>10. Changes to Terms</h2>
-    <p>We may update these Terms of Service from time to time. Continued use of BudgetPal after changes constitutes your acceptance of the revised terms.</p>
-
-    <h2>11. Contact</h2>
-    <p>If you have questions or concerns regarding these terms, please contact us at help.budgetpal@gmail.com</p>
-
 </body>
 </html>
